<resources>
    <string name="app_name">DonationX</string>
    <string name="donateTitle">Marge Simpson No.1</string>
    <string name="donateSubtitle">Thank you for any help, big or small, Marge x</string>
    <string name="donateButton">Donate</string>
    <string name="paypal">PayPal</string>
    <string name="direct">Direct</string>
    <string name="amount">Amount</string>
    <string name="total">Total so Far</string>
    <string name="totalSoFar">$ Total</string>
    <string name="reportTitle">Donations Report</string>
    <string name="defaultAmount">00</string>
    <string name="defaultMethod">N/A</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="action_donate">Donate</string>
    <string name="action_report">List of Donations</string>
    <string name="goal">10000</string>
    <string name="our_goal">How much is left to our goal</string>

    <string name="action_share">Share</string>
    <string name="action_send">Send</string>
    <string name="group_communicate">Communicate</string>

    <string name="nav_header_title">Donate to Marge</string>
    <string name="nav_header_subtitle">margenumber1@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="name">Name</string>
    <string name="enter_name">Enter Name</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="about_marge">About Marge</string>

    <string name="about_marge_family">Marge is a pround mother of 3</string>
    <string name="bart_lisa_and_maggie">Bart, Lisa and Maggie</string>
    <string name="about_marraige">She is also a proud wife to her husband, Homer</string>
    <string name="google_maps">Google Maps</string>

    <string name="hyperlink">\n<a href="https://simpsonswiki.com/wiki/Marge_Simpson">If you want to find out more about me, you can click here</a></string>

</resources>