<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/donateFragment"
            android:icon="@drawable/ic_menu_donate"
            android:title="@string/action_donate" />
        <item
            android:id="@+id/reportFragment"
            android:icon="@drawable/ic_menu_report"
            android:title="@string/action_report" />
    </group>

    <item android:title="@string/group_communicate">
        <menu>
            <item
                android:id="@+id/aboutFragment"
                android:icon="@drawable/ic_about"
                android:title="@string/about_marge" />
            <item
                android:id="@+id/mapFragment"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/google_maps" />
        </menu>
    </item>

</menu>
